# Agentic-AI

./: .gitignore  README.md  app.py  app_streamlit.py  pyproject.toml  test_memory.py  test_rag.py  test_read.py
agents/: coding.py  progress.py  quiz.py  rag_agent.py  teacher.py
graph/: workflow.py
memory/: memory.py  student.json
prompts/: teacher_prompt.py
rag/: chunk.py  embed.py  ingest.py  pdf_ingest.py  retriever.py
