[project]
name = "ml-academy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
